--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.2.10
+autopep8==1.5.4
 Django==3.1.2
+django-cleanup==5.1.0
+pycodestyle==2.6.0
 pytz==2020.1
 sqlparse==0.3.1
+toml==0.10.1
