--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ hyperlink==20.0.1
 idna==2.10
 incremental==17.5.0
 msgpack==1.0.0
+Pillow==8.0.1
 py-vapid==1.7.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
