--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,12 @@ cryptography==3.1.1
 daphne==2.5.0
 Django==3.1.2
 django-cleanup==5.1.0
+django-filter==2.4.0
+django-manager-utils==1.4.0
+django-query-builder==1.2.0
+django-webpush==0.3.3
+djangorestframework==3.12.1
+fleming==0.5.0
 hiredis==1.1.0
 http-ece==1.1.0
 hyperlink==20.0.1
