--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Django==3.1.2
 django-cleanup==5.1.0
 django-filter==2.4.0
 django-manager-utils==1.4.0
+django-phonenumber-field==5.0.0
 django-query-builder==1.2.0
 django-webpush==0.3.3
 djangorestframework==3.12.1
@@ -25,6 +26,7 @@ hyperlink==20.0.1
 idna==2.10
 incremental==17.5.0
 msgpack==1.0.0
+phonenumberslite==8.12.11
 Pillow==8.0.1
 py-vapid==1.7.1
 pyasn1==0.4.8
