--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,74 @@
-aioredis==1.3.1
+appdirs==1.4.4
+appnope==0.1.0
 asgiref==3.2.10
-async-timeout==3.0.1
-attrs==20.2.0
-autobahn==20.7.1
-Automat==20.2.0
 autopep8==1.5.4
+backcall==0.2.0
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
-constantly==15.1.0
 cryptography==3.1.1
-daphne==2.5.0
+decorator==4.4.2
+distlib==0.3.1
 Django==3.1.2
 django-cleanup==5.1.0
-django-filter==2.4.0
-django-manager-utils==1.4.0
+django-paypal==1.0.0
 django-phonenumber-field==5.0.0
-django-query-builder==1.2.0
+django-progressive-web-app==0.1.1
 django-webpush==0.3.3
 djangorestframework==3.12.1
-fleming==0.5.0
-hiredis==1.1.0
+djangorestframework-simplejwt==4.5.0
+filelock==3.0.12
 http-ece==1.1.0
-hyperlink==20.0.1
 idna==2.10
-incremental==17.5.0
-msgpack==1.0.0
-phonenumberslite==8.12.11
+ipykernel==5.3.4
+ipython==7.18.1
+ipython-genutils==0.2.0
+jedi==0.17.2
+jupyter-client==6.1.7
+jupyter-core==4.6.3
+numpy==1.19.2
+pandas==1.1.3
+parso==0.7.1
+pexpect==4.8.0
+phonenumberslite==8.12.12
+pickleshare==0.7.5
 Pillow==8.0.1
+prompt-toolkit==3.0.7
+ptyprocess==0.6.0
 py-vapid==1.7.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pycparser==2.20
-PyHamcrest==2.0.2
-pyOpenSSL==19.1.0
+pyfcm==1.4.7
+Pygments==2.7.1
+PyJWT==1.7.1
 python-dateutil==2.8.1
 pytz==2020.1
 pywebpush==1.9.4
+pyzmq==19.0.2
 requests==2.24.0
-service-identity==18.1.0
 six==1.15.0
+sounddevice==0.4.0
+SoundFile==0.10.3.post1
+soupsieve==2.0.1
 sqlparse==0.3.1
+stream-chat==1.4.0
+stripe==2.53.0
+suds-jurko==0.6
+swapper==1.1.2.post1
+text-unidecode==1.3
 toml==0.10.1
+tornado==6.0.4
+traitlets==5.0.4
 Twisted==20.3.0
 txaio==20.4.1
-ua-parser==0.10.0
-urllib3==1.25.11
-user-agents==2.2.0
-zope.interface==5.1.2
+typing-extensions==3.7.4.3
+urllib3==1.25.10
+virtualenv==20.0.28
+virtualenv-clone==0.5.4
+wcwidth==0.2.5
+websocket-client==0.57.0
+websockets==8.1
+whitenoise==5.2.0
+wrapt==1.12.1
+xmltodict==0.12.0
+zope.interface==5.1.0
