--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,7 @@ text-unidecode==1.3
 toml==0.10.1
 tornado==6.0.4
 traitlets==5.0.4
+twilio==6.47.0
 Twisted==20.3.0
 txaio==20.4.1
 typing-extensions==3.7.4.3
