--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,44 @@
+aioredis==1.3.1
 appdirs==1.4.4
 appnope==0.1.0
 asgiref==3.2.10
+async-timeout==3.0.1
+attrs==20.3.0
+autobahn==20.7.1
+Automat==20.2.0
 autopep8==1.5.4
 backcall==0.2.0
 certifi==2020.6.20
 cffi==1.14.3
+channels==3.0.2
+channels-redis==3.2.0
 chardet==3.0.4
+constantly==15.1.0
 cryptography==3.1.1
+daphne==3.0.1
 decorator==4.4.2
 distlib==0.3.1
-Django==3.1.2
+Django==3.1.3
 django-cleanup==5.1.0
 django-phonenumber-field==5.0.0
 django-progressive-web-app==0.1.1
 djangorestframework==3.12.1
 djangorestframework-simplejwt==4.5.0
 filelock==3.0.12
+hiredis==1.1.0
 http-ece==1.1.0
+hyperlink==20.0.1
 idna==2.10
+incremental==17.5.0
 ipykernel==5.3.4
 ipython==7.18.1
 ipython-genutils==0.2.0
 jedi==0.17.2
 jupyter-client==6.1.7
 jupyter-core==4.6.3
+msgpack==1.0.0
 numpy==1.19.2
+oauthlib==3.1.0
 pandas==1.1.3
 parso==0.7.1
 pexpect==4.8.0
@@ -34,16 +48,22 @@ Pillow==8.0.1
 prompt-toolkit==3.0.7
 ptyprocess==0.6.0
 py-vapid==1.7.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pycparser==2.20
 pyfcm==1.4.7
 Pygments==2.7.1
+PyHamcrest==2.0.2
 PyJWT==1.7.1
+pyOpenSSL==19.1.0
 python-dateutil==2.8.1
 pytz==2020.1
 pywebpush==1.9.4
 pyzmq==19.0.2
 requests==2.24.0
+requests-oauthlib==1.3.0
+service-identity==18.1.0
 six==1.15.0
 sounddevice==0.4.0
 SoundFile==0.10.3.post1
