--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ django-progressive-web-app==0.1.1
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.3.0
 filelock==3.0.12
+gunicorn==20.0.4
 hiredis==1.1.0
 http-ece==1.1.0
 hyperlink==20.0.1
@@ -52,6 +53,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pycparser==2.20
+pycryptodomex==3.9.9
 pyfcm==1.4.7
 Pygments==2.7.1
 PyHamcrest==2.0.2
