--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,10 @@ cryptography==3.1.1
 daphne==3.0.1
 decorator==4.4.2
 distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.1.3
 django-cleanup==5.1.0
+django-heroku==0.3.1
 django-phonenumber-field==5.0.0
 django-progressive-web-app==0.1.1
 djangorestframework==3.12.2
@@ -47,6 +49,7 @@ phonenumberslite==8.12.12
 pickleshare==0.7.5
 Pillow==8.0.1
 prompt-toolkit==3.0.7
+psycopg2==2.8.6
 ptyprocess==0.6.0
 py-vapid==1.7.1
 pyasn1==0.4.8
@@ -86,6 +89,7 @@ urllib3==1.25.10
 virtualenv==20.0.28
 virtualenv-clone==0.5.4
 wcwidth==0.2.5
+whitenoise==5.2.0
 wrapt==1.12.1
 xmltodict==0.12.0
 zope.interface==5.1.0
