--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ jedi==0.17.2
 jupyter-client==6.1.7
 jupyter-core==4.6.3
 msgpack==1.0.0
+msgpack-python==0.5.6
 numpy==1.19.2
 oauthlib==3.1.0
 pandas==1.1.3
@@ -63,6 +64,7 @@ pyOpenSSL==19.1.0
 python-dateutil==2.8.1
 pytz==2020.1
 pyzmq==19.0.2
+redis==2.10.6
 requests==2.24.0
 requests-oauthlib==1.3.0
 service-identity==18.1.0
