--- a/requirements.txt
+++ b/requirements.txt
@@ -62,17 +62,20 @@ PyHamcrest==2.0.2
 PyJWT==1.7.1
 pyOpenSSL==19.1.0
 python-dateutil==2.8.1
+python-http-client==3.3.1
 pytz==2020.1
 pyzmq==19.0.2
 redis==2.10.6
 requests==2.24.0
 requests-oauthlib==1.3.0
+sendgrid==3.6.5
 service-identity==18.1.0
 six==1.15.0
 sounddevice==0.4.0
 SoundFile==0.10.3.post1
 soupsieve==2.0.1
 sqlparse==0.3.1
+starkbank-ecdsa==1.1.0
 stream-chat==1.4.0
 stripe==2.53.0
 suds-jurko==0.6
