--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ django-heroku==0.3.1
 django-progressive-web-app==0.1.1
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.3.0
+exponent-server-sdk==1.0.0
 filelock==3.0.12
 hiredis==1.1.0
 http-ece==1.1.0
