--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cffi==1.14.3
 channels==3.0.2
 channels-redis==3.2.0
 chardet==3.0.4
+cloudinary==1.23.0
 constantly==15.1.0
 cryptography==3.1.1
 daphne==3.0.1
